--- a/css/video-page.css
+++ b/css/video-page.css
@@ -55,11 +55,11 @@ justify-content: space-between;
 .left-icons > .logo-container 
 {
     padding:1rem ;
+    cursor: pointer;
 }
 
 .logo-container > img 
 {
-    width: auto;
     height:1.5rem;
 }
 
@@ -431,12 +431,12 @@ justify-content: space-between;
     
     .left-icons > .logo-container 
     {
+        cursor: pointer;
     }
     
     .logo-container > img 
     {
-        width: auto;
-        height:1.5rem;
+        height:1rem;
     }
     
     
